typescript/checker/tests/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration9.ts.stderr
error: TS1092
 --> $DIR/tests/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration9.ts:2:15
  |
2 |   constructor<T>() { }
  |               ^

